<resources>
    <string name="app_name">Foodie</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_food">AddFoodActivity</string>
    <string name="title_activity_quick_add">QuickAddActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="snacks">Snacks</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="add">Add</string>
    <string name="calorie">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="fat">Fat</string>
    <string name="protein">Protein</string>
    <string name="type1">1 month</string>
    <string name="type2">3 months</string>
    <string name="food_name">Food Name</string>


</resources>
