<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.lalongooo.Rings
            android:id="@+id/rings"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:rings_inner_first_color="#FF9F1C"
            app:rings_inner_first_progress="0"
            app:rings_inner_first_text="Fat"
            app:rings_inner_second_color="#4BC6B9"
            app:rings_inner_second_progress="0"
            app:rings_inner_second_text="Carbs"
            app:rings_inner_third_color="#757780"
            app:rings_inner_third_progress="0"
            app:rings_inner_third_text="Protein"
            app:rings_overall_color="#EA3546"
            app:rings_overall_progress="0"
            app:rings_overall_text="Calories"
            app:rings_text_size="20sp"
            app:rings_unfinished_color="#f2f2f2"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/margin_components"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_snacks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_components"
            android:minHeight="@dimen/cv_min_height_rv"
            android:layout_below="@id/rings">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_snacks"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/half_padding_components"
                        android:text="@string/snacks"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="@dimen/half_padding_components"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:id="@+id/btn_add_snacks"
                        android:text="@string/add"
                        android:src="@drawable/ic_fast_food"
                        android:background="@null"/>
                </LinearLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_snacks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_breakfast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_snacks"
            android:layout_margin="@dimen/margin_components"
            android:minHeight="@dimen/cv_min_height_rv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_breakfast"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/half_padding_components"
                        android:text="@string/breakfast"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="@dimen/half_padding_components"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:id="@+id/btn_add_breakfast"
                        android:text="@string/add"
                        android:src="@drawable/ic_fast_food"
                        android:background="@null"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_breakfast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_lunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_breakfast"
            android:layout_margin="@dimen/margin_components"
            android:minHeight="@dimen/cv_min_height_rv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_lunch"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/half_padding_components"
                        android:text="@string/lunch"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="@dimen/half_padding_components"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:id="@+id/btn_add_lunch"
                        android:text="@string/add"
                        android:src="@drawable/ic_fast_food"
                        android:background="@null"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_lunch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/dinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/cv_lunch"
            android:layout_margin="@dimen/margin_components"
            android:minHeight="@dimen/cv_min_height_rv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_dinner"
                        android:layout_width="0dp"
                        android:layout_weight="5"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/half_padding_components"
                        android:text="@string/dinner"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                    <ImageButton
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:padding="@dimen/half_padding_components"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:id="@+id/btn_add_dinner"
                        android:text="@string/add"
                        android:src="@drawable/ic_fast_food"
                        android:background="@null"/>
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>